--- a/Skillshare_DL_[KENWAY].ipynb
+++ b/Skillshare_DL_[KENWAY].ipynb
@@ -37,7 +37,7 @@
       "source": [
         "#@markdown <h3>⬅ Run This Cell to  Mount Gdrive\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/gdrive/Shared drive/vishalownthisbitch/UIUX/Skillshare')"
       ],
       "execution_count": 0,
       "outputs": []
